Admin: add an admin notice if database upgrade was skipped.
This change adds a persistent admin notice (who doesn't love those?) in the event that the forums are part of a large WordPress installation that prevented the automatic database upgrade routine from running.

Two links are provided: one to "Go Upgrade" and another to "Hide Forever". The first will take the user (with adequate capability) to the `Tools > Forums > Upgrade` screen; the second will delete the notice nag key from `wp_options`.

This includes some admin area CSS tweaks, so the asset version gets a bump as well.

--- a/src/includes/admin/assets/css/admin.css
+++ b/src/includes/admin/assets/css/admin.css
@@ -43,6 +43,29 @@
 	content: "\f449";
 }
 
+.notice-bbpress {
+	border-left: 4px solid #78cd95;
+	padding-left: 36px;
+	background-color: rgb(235, 255, 235);
+	position: relative;
+}
+
+.notice-bbpress .bbpress-logo-icon {
+	position: absolute;
+	height: auto;
+	width: auto;
+	padding: 7px 9px;
+	top: 50%;
+	left: 0;
+	transform: translateY(-50%);
+	font: 400 24px/1 dashicons !important;
+}
+
+.notice-bbpress .bbpress-logo-icon:before {
+	content: "\f477";
+	color: #555;
+}
+
 @-webkit-keyframes buzz {
 
 	0% {
