Admin: run `admin.css` through `grunt commit` routine.
This adds a missing Webkit CSS shim for how the bbPress logo is vertically aligned in the new database upgrade notice.

--- a/src/includes/admin/assets/css/admin.css
+++ b/src/includes/admin/assets/css/admin.css
@@ -57,6 +57,7 @@
 	padding: 7px 9px;
 	top: 50%;
 	left: 0;
+	-webkit-transform: translateY(-50%);
 	transform: translateY(-50%);
 	font: 400 24px/1 dashicons !important;
 }
