Accessibility: Update the `screen-reader-text` CSS class via wp:changeset:41622
This changeset merges the latest #a11y updates from WordPress Core for screen readers.

Props ashokrd2013.
Fixes #3172.

--- a/src/templates/default/css/bbpress.css
+++ b/src/templates/default/css/bbpress.css
@@ -23,7 +23,9 @@
 	height: 1px;
 	width: 1px;
 	overflow: hidden;
-	clip: rect(0 0 0 0);
+	clip: rect(1px, 1px, 1px, 1px);
+	-webkit-clip-path: inset(50%);
+	clip-path: inset(50%);
 	border: 0;
 	word-wrap: normal !important; /* many screen reader and browser combinations announce broken words as they would appear visually */
 }
