--- a/src/templates/default/css/bbpress.css
+++ b/src/templates/default/css/bbpress.css
@@ -227,16 +227,16 @@ li.bbp-topic-freshness {
 	float: none;
 }
 
-#bbpress-forums div.bbp-forum-author a.bbp-author-name,
-#bbpress-forums div.bbp-topic-author a.bbp-author-name,
-#bbpress-forums div.bbp-reply-author a.bbp-author-name {
+#bbpress-forums div.bbp-forum-author .bbp-author-name,
+#bbpress-forums div.bbp-topic-author .bbp-author-name,
+#bbpress-forums div.bbp-reply-author .bbp-author-name {
 	margin: 0 12px;
 	word-wrap: break-word;
 	display: inline-block;
 }
 
-#bbpress-forums div.bbp-topic-author a.bbp-author-name,
-#bbpress-forums div.bbp-reply-author a.bbp-author-name {
+#bbpress-forums div.bbp-topic-author .bbp-author-name,
+#bbpress-forums div.bbp-reply-author .bbp-author-name {
 	clear: left;
 	display: block;
 }
@@ -1413,8 +1413,8 @@ body.my-account #bbpress-forums {
 		width: 100%;
 	}
 
-	#bbpress-forums div.bbp-topic-author a.bbp-author-name,
-	#bbpress-forums div.bbp-reply-author a.bbp-author-name {
+	#bbpress-forums div.bbp-topic-author .bbp-author-name,
+	#bbpress-forums div.bbp-reply-author .bbp-author-name {
 		clear: none;
 		display: inline-block;
 		margin-left: 0;
