Metaboxes: show non-public replies in topic-replies meta/list box.
This shows trashed/spam replies to capable users when editing a topic via WordPress admin, because if you're moderating a topic from here, chances are high you want to see everything - not just public replies.

--- a/src/includes/admin/assets/css/admin.css
+++ b/src/includes/admin/assets/css/admin.css
@@ -421,11 +421,13 @@ body.post-type-reply strong.label {
 	background-color: #f0f0f0;
 }
 
-#the-list .status-spam {
+#the-list .status-spam,
+#bbp-reply-list .status-trash {
 	background-color: #fee;
 }
 
-#the-list .status-spam:nth-child(odd) {
+#the-list .status-spam:nth-child(odd),
+#bbp-reply-list .status-trash:nth-child(odd) {
 	background-color: #fdd;
 }
 
@@ -438,7 +440,8 @@ body.post-type-reply strong.label {
 }
 
 #the-list .status-closed td,
-#the-list .status-spam td {
+#the-list .status-spam td,
+#bbp-reply-list .status-trash td {
 	color: #999;
 }
 
