Users: make sure "Forum Role" is next to "Site Role" in User's List Table.
This change comes with a CSS tweak to keep the role column at 15% width, and bumps the asset version accordingly.

--- a/src/includes/admin/assets/css/admin.css
+++ b/src/includes/admin/assets/css/admin.css
@@ -340,6 +340,7 @@ body.post-type-reply strong.label {
 	width: 10% !important;
 }
 
+.column-bbp_user_role,
 .column-bbp_forum_created,
 .column-bbp_topic_created,
 .column-bbp_reply_created {
