Forums: revert part of r6860.
Go back to `ul` and `li` to avoid breaking CSS for existing installs, and use a CSS separator instead to address the original invalid markup issues.

This might show an extra separator in circumstances where filters or template-overrides are targeting very specific things, but that's better than breaking mark-up changes.

See #3217.

--- a/src/templates/default/css/bbpress.css
+++ b/src/templates/default/css/bbpress.css
@@ -154,10 +154,13 @@ body.reply-edit .reply {
 	border-left: 1px solid #ddd;
 }
 
-#bbpress-forums .bbp-forums-list li,
-#bbpress-forums .bbp-forums-list span {
+#bbpress-forums .bbp-forums-list .bbp-forum {
 	display: inline;
 	font-size: 11px;
+}
+
+#bbpress-forums .bbp-forums-list .bbp-forum.css-sep:not(:last-child):after {
+	content: ', ';
 }
 
 #bbpress-forums li.bbp-footer p {
