Upgrades: add column width styling to tools list tables.
This ensures that columns are usually wide enough to fit their anticipated contents.

See #3244.

--- a/src/includes/admin/assets/css/admin.css
+++ b/src/includes/admin/assets/css/admin.css
@@ -613,3 +613,12 @@ button.bbp-db-pass-toggle.password:after {
 td.bbp-tool-title strong {
 	display: block;
 }
+
+.manage-column.column-components {
+	width: 20%
+}
+
+.manage-column.column-version,
+.manage-column.column-overhead {
+	width: 10%;
+}
