Upgrades: append upgrade count to "Tools" if there are pending upgrades
* Add function and method to tweak the `$menu` global
* Add styling for count in `nav-tab-wrapper` UI

This change adds a `span.awaiting-mod` wrapper around the pending upgrade count in a few strategic locations around the WordPress Admin UI.

See #3244.

--- a/src/includes/admin/assets/css/admin.css
+++ b/src/includes/admin/assets/css/admin.css
@@ -622,3 +622,19 @@ td.bbp-tool-title strong {
 .manage-column.column-overhead {
 	width: 10%;
 }
+
+.nav-tab-wrapper a span.awaiting-mod {
+	display: inline-block;
+	vertical-align: top;
+	margin: 3px 0 0 1px;
+	padding: 0 5px;
+	min-width: 7px;
+	height: 17px;
+	border-radius: 11px;
+	background-color: #ca4a1f;
+	color: #fff;
+	font-size: 9px;
+	line-height: 17px;
+	text-align: center;
+	z-index: 26;
+}
