Coding Standards: Add missing trailing semi-colon from [6893]

--- a/src/includes/admin/assets/css/admin.css
+++ b/src/includes/admin/assets/css/admin.css
@@ -615,7 +615,7 @@ td.bbp-tool-title strong {
 }
 
 .manage-column.column-components {
-	width: 20%
+	width: 20%;
 }
 
 .manage-column.column-version,
