Upgrades: Link to pending upgrades, if there are any.
This commit modifies the "Upgrade Forums" page by adding Statuses to filter by, specifically for pending upgrades. This allows bbPress to link directly to the upgrades that need doing, rather than the generic page itself.

Along with this commit are accompanying styling tweaks and helper functions to make this functionality possible.

Fixes #3244.

--- a/src/includes/admin/assets/css/admin.css
+++ b/src/includes/admin/assets/css/admin.css
@@ -618,9 +618,12 @@ td.bbp-tool-title strong {
 	width: 20%;
 }
 
-.manage-column.column-version,
+.manage-column.column-version {
+	width: 11%;
+}
+
 .manage-column.column-overhead {
-	width: 10%;
+	width: 13%;
 }
 
 .nav-tab-wrapper a span.awaiting-mod {
