Tools: wrap routine descriptions in a description paragraph tag.
This commit ensures that the descriptive text used to highlight what a specific tool does does not blend in with the title above it.

Fixes #3277. Props JarretC.

--- a/src/includes/admin/assets/css/admin.css
+++ b/src/includes/admin/assets/css/admin.css
@@ -614,6 +614,10 @@ td.bbp-tool-title strong {
 	display: block;
 }
 
+td.bbp-tool-title p {
+	margin: 0;
+}
+
 .manage-column.column-components {
 	width: 20%;
 }
