Importer: make inside meta-box contents a bit more squared.
This change fixes a padding issue with the inner meta-box content, causing there to be more space on the bottom than on the top.

--- a/src/includes/admin/assets/css/admin.css
+++ b/src/includes/admin/assets/css/admin.css
@@ -517,6 +517,11 @@ div.bbp-converter-log .mini-step {
 	color: #fff;
 }
 
+#bbp-converter-monitor .inside {
+	margin: 0;
+	padding: 5px;
+}
+
 #bbp-converter-monitor .bbp-progress-bar {
 	position: absolute;
 	left: 0;
