--- a/src/templates/default/css/bbpress.css
+++ b/src/templates/default/css/bbpress.css
@@ -39,11 +39,34 @@
 	line-height: 18px;
 }
 
+/* Gently apply sans-serif styling by default */
+#bbpress-forums a,
+#bbpress-forums button,
+#bbpress-forums p,
+#bbpress-forums ul,
+#bbpress-forums ol,
+#bbpress-forums li,
+#bbpress-forums div,
+#bbpress-forums span,
+#bbpress-forums input,
+#bbpress-forums select,
+#bbpress-forums textarea {
+	font-family: sans-serif;
+}
+
 #bbpress-forums a,
 #bbpress-forums a:hover {
 	box-shadow: none;
 	border: none;
 	transition: none;
+}
+
+/* Uses ID & class together for increased target strength */
+#bbpress-forums.bbpress-wrapper ul {
+	background: none;
+	list-style: none;
+	margin: 0;
+	padding: 0;
 }
 
 #bbpress-forums hr {
@@ -95,13 +118,6 @@ body.reply-edit .reply {
 #bbpress-forums ul.status-closed,
 #bbpress-forums ul.status-closed a {
 	color: #ccc;
-}
-
-#bbpress-forums ul {
-	background: none;
-	list-style: none;
-	margin: 0;
-	padding: 0;
 }
 
 #bbpress-forums ul.bbp-threaded-replies {
@@ -474,7 +490,7 @@ div.bbp-topic-tags {
 
 #bbpress-forums div.bbp-breadcrumb p,
 #bbpress-forums div.bbp-topic-tags p {
-	margin-bottom: 10px;
+	margin: 0 0 10px 0;
 }
 
 #bbpress-forums div.bbp-topic-tags {
@@ -716,11 +732,24 @@ td.bbp-topic-counts {
 	width: 100px;
 }
 
+/* Some themes aggressively add padding to paragraph tags */
+#bbpress-forums fieldset.bbp-form p {
+	padding: 0;
+}
+
 #bbpress-forums fieldset.bbp-form p,
 #bbpress-forums fieldset.bbp-form textarea,
 #bbpress-forums fieldset.bbp-form select,
 #bbpress-forums fieldset.bbp-form input {
 	margin: 0 0 8px;
+}
+
+/* Try to prevent untall selects & text boxes */
+#bbpress-forums fieldset.bbp-form select,
+#bbpress-forums fieldset.bbp-form input[type="text"] {
+	min-height: 28px;
+	height: 28px;
+	padding: 5px;
 }
 
 textarea#bbp_reply_content,
@@ -1388,8 +1417,8 @@ body.my-account #bbpress-forums {
 @media only screen and (max-width: 480px) {
 
 	#bbpress-forums div.bbp-topic-tags {
-		clear: left;
-		float: left;
+		clear: both;
+		float: none;
 	}
 
 	div.bbp-search-form input,
@@ -1416,8 +1445,8 @@ body.my-account #bbpress-forums {
 	}
 
 	span.bbp-admin-links {
-		clear: left;
-		float: left;
+		float: none;
+		clear: both;
 	}
 
 	#bbpress-forums .bbp-forums-list li,
@@ -1436,6 +1465,7 @@ body.my-account #bbpress-forums {
 		text-align: left;
 		width: calc(100% - 100px);
 		border-bottom: 1px solid #efefef;
+		box-sizing: content-box;
 	}
 
 	#bbpress-forums div.bbp-topic-author .bbp-author-name,
