Theme Compat: Add back original `ul` styling.
This commit fixes an unintentional styling change. The original rule should not have been removed.

See r6986.

--- a/src/templates/default/css/bbpress.css
+++ b/src/templates/default/css/bbpress.css
@@ -61,7 +61,9 @@
 	transition: none;
 }
 
-/* Uses ID & class together for increased target strength */
+/* Original UL styling */
+#bbpress-forums ul,
+/* Use ID & class together for increased target strength */
 #bbpress-forums.bbpress-wrapper ul {
 	background: none;
 	list-style: none;
