Users: move `_new_email` from options to usermeta.
This commit brings bbPress up-to-date with how WordPress tracks changes to email addresses. It includes a small bit of styling to add emphasis to the email address inside the standard notice wrapper.

See #3306. For 2.7, trunk.

--- a/src/templates/default/css/bbpress.css
+++ b/src/templates/default/css/bbpress.css
@@ -1125,6 +1125,13 @@ div.bbp-template-notice li {
 	line-height: 1.4;
 }
 
+#bbpress-forums div.bbp-template-notice code {
+	font-size: 11px;
+	padding: 2px 4px;
+	background: rgba(200,200,200,0.3);
+	border-radius: 3px;
+}
+
 /* =Stickies
 -------------------------------------------------------------- */
 
