--- a/src/templates/default/css/bbpress.css
+++ b/src/templates/default/css/bbpress.css
@@ -1128,7 +1128,7 @@ div.bbp-template-notice li {
 #bbpress-forums div.bbp-template-notice code {
 	font-size: 11px;
 	padding: 2px 4px;
-	background: rgba(200,200,200,0.3);
+	background: rgba(200, 200, 200, 0.3);
 	border-radius: 3px;
 }
 
