General: fix a few typos.
Props ankitmaru, mukesh27. Fixes #3312, #3313, #3315. For 2.7, trunk.

--- a/src/templates/default/css/bbpress.css
+++ b/src/templates/default/css/bbpress.css
@@ -988,7 +988,7 @@ p.form-allowed-tags {
 }
 
 #bbpress-forums #bbp-your-profile fieldset fieldset.password input,
-#bbpress-forums #bbp-your-profile fieldset fieldset.passwword textarea {
+#bbpress-forums #bbp-your-profile fieldset fieldset.password textarea {
 	width: 100%;
 }
 
